--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CryptUrMess">
+        <service
+            android:name=".services.AppService"
+            android:enabled="true"
+            android:exported="true"></service>
+
         <activity
             android:name=".ui.MainActivity"
             android:exported="true">
