--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,9 @@
     <application
         android:name="uqac.dim.crypturmess.CrypturMessApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_crypturmess_img"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_crypturmess_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CryptUrMess">
         <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version"/>
