--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
     <application
         android:name="uqac.dim.crypturmess.CrypturMessApplication"
@@ -17,6 +18,14 @@
         android:theme="@style/Theme.CryptUrMess">
         <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version"/>
 
+        <receiver
+            android:name=".services.Restarter"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="restartservice" />
+            </intent-filter>
+        </receiver>
         <service
             android:name=".services.AppService"
             android:enabled="true"
